# learn_ffmpeg

./: .gitignore  CMakeLists.txt  README.md  examples.md
doc/: command.txt  examples.md
src/: 001_remove_yuv_color.cc  002_picture_in_picture.cc  003_merge.cc  004_rgb2yuv.cc  010_capture.cc  012_rotate.cc  100_capture_ffmpeg.cc  100_capture_mjpeg.cc  101_capture_yuy2.cc  102_jpg2yuv.cc  103_h264_to_yuv.cc  103_yuv2jpg.cc  104_h264_to_yuv.cc  105_yuv_to_h264.cc  106_mp4_speedup.c  107_extract_frame.cc  108_yuv_to_mp4.cc  109_mp4_to_h264.cc  CMakeLists.txt
tools/: CMakeLists.txt  cut_bin.cc
util/: BlockingQueue.h  CMakeLists.txt  Common.cc  Common.h  File.h  Image.cc  Image.h  h264.c  h264.h
util_ff/: CMakeLists.txt  ImageEncode.cc  ImageEncode.h  ImageFF.cc  ImageFF.h
